...
                        resultLabel.text = "😃 Correct!"
                    } else {
                        resultLabel.text = "🙁 Not correct"
                    }
                    sudokuTextView.text = ""
                } else {
                    let alert = UIAlertController(title: "Error", message: "Please enter the Sudoku or the size correctly.", preferredStyle: UIAlertControllerStyle.alert)
                    alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
                    self.present(alert, animated: true, completion: nil)
                }
            } else {
                let alert = UIAlertController(title: "Error", message: "Please enter the Sudoku or the size correctly.", preferredStyle: UIAlertControllerStyle.alert)
                alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
                self.present(alert, animated: true, completion: nil)
...
